Fix card overflow issues

--- a/src/components/HomePage/Card/card.module.css
+++ b/src/components/HomePage/Card/card.module.css
@@ -1,5 +1,5 @@
 .defaultCard {
-    @apply w-full px-3 py-4 bg-white border border-zinc-200 rounded-2xl dark:bg-zinc-800 dark:border-zinc-700;
+    @apply w-full px-2 py-3 bg-white border border-zinc-200 rounded-2xl dark:bg-zinc-800 dark:border-zinc-700;
     @apply transition-all duration-300 ease-in-out;
 }
 
@@ -8,6 +8,6 @@
 }
 
 .extraCardPadding {
-    @apply !px-8;
-    @apply pb-7;
+    @apply !px-7;
+    @apply !pb-7;
 }
